--- a/common/templates/common/emails/return_book.html
+++ b/common/templates/common/emails/return_book.html
@@ -26,7 +26,7 @@
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" style="margin: auto;">
                             <tr>
                                 <td style="border-radius: 3px; background: #222222; text-align: center;" class="button-td">
-                                    <a href="{{ BASE_URL }}" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
+                                    <a href="{{ BASE_URL }}{% url 'book:booking-book-read' pk=book_reading.pk email=user.email token=user.get_token %}" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
                                         <span style="color:#ffffff;" class="button-link">Підтверджую</span>
                                     </a>
                                 </td>
